fixed loader on mobile device

--- a/public/css/media.css
+++ b/public/css/media.css
@@ -207,7 +207,7 @@
     --global-padding: 0 20px;
     --global-columns: 1;
   }
-  .ag-btn {
+  #loadMore {
     max-width: unset;
   }
   /* Newsroom */
